fixed issue with responsiveness on smaller screens

--- a/style.css
+++ b/style.css
@@ -115,3 +115,9 @@ a:hover{
   pointer-events: none;
   opacity: 0.2;
 }
+
+/* @media only screen and (max-width: 600px) {
+  .row{
+
+  }
+} */
